config/samples/test-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-backend
  template:
    metadata:
      labels:
        app: nginx-backend
    spec:
      containers:
      - image: nginx:1.21
        name: nginx
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-custom-config
      volumes:
      - configMap:
          name: nginx-custom-config
        name: nginx-custom-config
