config/samples/test-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-backend
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-backend
